--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@tanstack/react-query": "^5.83.0",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.1",
+    "cloudinary": "^2.8.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "date-fns": "^3.6.0",
